--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -29,7 +29,9 @@
     "Before the hour of code, we expect you\n",
     "\n",
     "- have installed the lastest conda (recommand) \n",
-    "- have installed the latest python2.7 , pip"
+    "- have installed the latest python2.7 , pip\n",
+    "\n",
+    "- Prepare [cmder](http://cmder.net/) ( Windows Only )"
    ]
   },
   {
@@ -58,6 +60,45 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise\n",
+    "\n",
+    "(1) Install conda\n",
+    "\n",
+    "~~~\n",
+    "$ conda --version\n",
+    "~~~\n",
+    "\n",
+    "(2) Run the following commands in your terminal.\n",
+    "\n",
+    "```\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda create -n test_env python=2\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source activate test_env\n",
+    "\n",
+    "$ pip install speedtest-cli\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source deactivate\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda env remove -n test_env\n",
+    "\n",
+    "$ conda info -e\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -76,6 +117,46 @@
     "If you don't have pip,\n",
     "you can manually install it via this link\n",
     "[pip Installation](http://pip.readthedocs.org/en/stable/installing/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise\n",
+    "\n",
+    "## pip - Run the follwing commands\n",
+    "\n",
+    "```\n",
+    "$ pip freeze\n",
+    "\n",
+    "$ pip install ipython\n",
+    "\n",
+    "$ pip insatll virtualenv\n",
+    "\n",
+    "$ pip uninstall ipython # optional\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## virtualenv -  Run the follwing commands\n",
+    "\n",
+    "```\n",
+    "$ cd ~\n",
+    "\n",
+    "$ virtualenv test_env\n",
+    "\n",
+    "$ source test_env/bin/activate\n",
+    "\n",
+    "$ pip freeze\n",
+    "$ pip install speedtest-cli\n",
+    "$ speedtest-cli\n",
+    "$ pip freeze\n",
+    "\n",
+    "$ deactivate\n",
+    "\n",
+    "$ cd ~\n",
+    "$ rm -rf test_env\n",
+    "```\n"
    ]
   },
   {
@@ -141,7 +222,32 @@
     " - [cmder](http://cmder.net/) Windows\n",
     "\n",
     " - [iTerm2](https://www.iterm2.com/) Mac\n",
-    "\n"
+    "\n",
+    "\n",
+    "pwd - print the current directory\n",
+    "\n",
+    "ls - print the files and working direcotries under the current direcotry\n",
+    "\n",
+    "cd /path/to/some/direcotry - change directory to /path/to/some/direcotry\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercsie\n",
+    "\n",
+    "Open your termial, type the following commands\n",
+    "\n",
+    "```\n",
+    "$ pwd\n",
+    "$ ls\n",
+    "\n",
+    "$ cd ~\n",
+    "$ pwd\n",
+    "\n",
+    "$ python\n",
+    "```"
    ]
   }
  ],
