--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -31,7 +31,23 @@
     "- have installed the lastest conda (recommand) \n",
     "- have installed the latest python2.7 , pip\n",
     "\n",
-    "- Prepare [cmder](http://cmder.net/) ( Windows Only )"
+    "- Prepare [cmder](http://cmder.net/) ( Windows Only )\n",
+    "\n",
+    "\n",
+    "### Cmder\n",
+    "\n",
+    "[Cmder](http://cmder.net/) - A Beautiful, Functional And Portable Windows Console\n",
+    "\n",
+    "- Portable \n",
+    "  Self-contained with no external dependencies\n",
+    "\n",
+    "- Unix tools on windows if decide to use the slightly bigger msysgit version (with git for windows)\n",
+    "\n",
+    "You may add **Git Bash** task.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "    \"\"C:\\Users\\ming\\Documents\\cmder\\vendor\\msysgit\\bin\\sh\" --login -i\"\n"
    ]
   },
   {
