--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "- basic HTML knowledge ( since we want to make a web crawler )\n",
     "\n",
+    "-  little knowledge about shell commands (pwd, ls, cd)\n",
     "\n",
     "## System requirement\n",
     "\n",
@@ -47,7 +48,23 @@
     "\n",
     "For example:\n",
     "\n",
-    "    \"\"C:\\Users\\ming\\Documents\\cmder\\vendor\\msysgit\\bin\\sh\" --login -i\"\n"
+    "    \"\"C:\\Users\\ming\\Documents\\cmder\\vendor\\msysgit\\bin\\sh\" --login -i\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Terminal - pwd, ls, cd\n",
+    "\n",
+    "#### Exercise\n",
+    "\n",
+    "pwd - print the current directory\n",
+    "\n",
+    "ls - print the files and working direcotries under the current direcotry\n",
+    "\n",
+    "cd /path/to/some/direcotry - change directory to /path/to/some/direcotry\n",
+    "\n",
+    "~~~\n",
+    "\n",
+    "~~~"
    ]
   },
   {
@@ -72,6 +89,33 @@
     "## Mac, Linux\n",
     "\n",
     "Dowanload the bash installer script and excute it in your terminal.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hour of code - Conda environment setting\n",
+    "\n",
+    "~~~\n",
+    "\n",
+    "Create a clean conda environment: hour_of_code\n",
+    "$ conda create -n hour_of_code python=2\n",
+    "\n",
+    "$ conda info -e\n",
+    "\n",
+    "Enter the hour_of_code environment\n",
+    "$ source activate hour_of_code\n",
+    "\n",
+    "... Operation in hour_of_code env\n",
+    "... Operation in hour_of_code env\n",
+    "... Operation in hour_of_code env\n",
+    "\n",
+    "Leave the hour_of_code environment\n",
+    "$ source deactivate\n",
+    "\n",
+    "~~~\n",
+    "\n"
    ]
   },
   {
