--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -34,8 +34,15 @@
     "\n",
     "- Prepare [cmder](http://cmder.net/) ( Windows Only )\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "### Cmder\n",
+    "### Cmder - Windows Only\n",
     "\n",
     "[Cmder](http://cmder.net/) - A Beautiful, Functional And Portable Windows Console\n",
     "\n",
@@ -51,10 +58,14 @@
     "    \"\"C:\\Users\\ming\\Documents\\cmder\\vendor\\msysgit\\bin\\sh\" --login -i\"\n",
     "\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Terminal - pwd, ls, cd\n",
-    "\n",
-    "#### Exercise\n",
     "\n",
     "pwd - print the current directory\n",
     "\n",
@@ -62,9 +73,16 @@
     "\n",
     "cd /path/to/some/direcotry - change directory to /path/to/some/direcotry\n",
     "\n",
-    "~~~\n",
     "\n",
-    "~~~"
+    "#### Exercise\n",
+    "\n",
+    "```\n",
+    "$ pwd\n",
+    "\n",
+    "$ ls\n",
+    "\n",
+    "$ cd \n",
+    "```"
    ]
   },
   {
