--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -118,7 +118,7 @@
     "~~~\n",
     "\n",
     "Create a clean conda environment: hour_of_code\n",
-    "$ conda create -n hour_of_code python=2\n",
+    "$ conda create -n hour_of_code python=2 # First-time setup\n",
     "\n",
     "$ conda info -e\n",
     "\n",
