--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -76,6 +76,8 @@
     "\n",
     "#### Exercise\n",
     "\n",
+    "Open your terminal, type\n",
+    "\n",
     "```\n",
     "$ pwd\n",
     "\n",
@@ -115,6 +117,8 @@
    "source": [
     "# Hour of code - Conda environment setting\n",
     "\n",
+    "Open your terminal, type\n",
+    "\n",
     "~~~\n",
     "\n",
     "Create a clean conda environment: hour_of_code\n",
@@ -132,8 +136,7 @@
     "Leave the hour_of_code environment\n",
     "$ source deactivate\n",
     "\n",
-    "~~~\n",
-    "\n"
+    "~~~\n"
    ]
   },
   {
