--- a/notebook/intro_python/manage_your_python_env_coda_virtualenv.ipynb
+++ b/notebook/intro_python/manage_your_python_env_coda_virtualenv.ipynb
@@ -2,6 +2,39 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise - Conda\n",
+    "\n",
+    "Run the following commands in your terminal.\n",
+    "\n",
+    "```\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda create -n test_env python=2\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source activate test_env\n",
+    "\n",
+    "$ pip install speedtest-cli\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source deactivate\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda env remove -n test_env\n",
+    "\n",
+    "$ conda info -e\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +51,9 @@
     "you can manually install it via this link\n",
     "[pip Installation](http://pip.readthedocs.org/en/stable/installing/).\n",
     "\n",
+    "\n",
     "# Exercise\n",
+    "\n",
     "\n",
     "## pip - Run the follwing commands\n",
     "\n",
@@ -53,45 +88,6 @@
     "$ rm -rf test_env\n",
     "```\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Exercise\n",
-    "\n",
-    "(1) Install conda\n",
-    "\n",
-    "~~~\n",
-    "$ conda --version\n",
-    "~~~\n",
-    "\n",
-    "(2) Run the following commands in your terminal.\n",
-    "\n",
-    "```\n",
-    "$ conda info -e\n",
-    "\n",
-    "$ conda create -n test_env python=2\n",
-    "\n",
-    "$ which speedtest-cli\n",
-    "\n",
-    "$ source activate test_env\n",
-    "\n",
-    "$ pip install speedtest-cli\n",
-    "\n",
-    "$ which speedtest-cli\n",
-    "\n",
-    "$ source deactivate\n",
-    "\n",
-    "$ which speedtest-cli\n",
-    "\n",
-    "$ conda info -e\n",
-    "\n",
-    "$ conda env remove -n test_env\n",
-    "\n",
-    "$ conda info -e\n",
-    "```"
    ]
   }
  ],
