--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -123,8 +123,7 @@
     "\n",
     "Open your terminal, type\n",
     "\n",
-    "~~~\n",
-    "\n",
+    "```\n",
     "Create a clean conda environment: hour_of_code\n",
     "$ conda create -n hour_of_code python=2 # First-time setup\n",
     "\n",
@@ -139,8 +138,14 @@
     "\n",
     "Leave the hour_of_code environment\n",
     "$ source deactivate\n",
+    "```\n",
     "\n",
-    "~~~\n"
+    "**Dangerous**: Remove the hour_of_code environment\n",
+    "\n",
+    "\n",
+    "```\n",
+    "$ conda env remove -n hour_of_code environment\n",
+    "```\n"
    ]
   },
   {
