--- a/notebook/intro_python/1_manage_your_python_env_coda_virtualenv.ipynb
+++ b/notebook/intro_python/1_manage_your_python_env_coda_virtualenv.ipynb
@@ -4,53 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "## Install Python\n",
-    "\n",
-    "- Windows\n",
-    "- Linux\n",
-    "- Mac\n",
-    "\n",
-    "There are some ways to install python.\n",
-    "\n",
-    "We recommend you installing [conda](http://conda.pydata.org/docs/).\n",
-    "\n",
-    "With conda, you can easily install python and some scientific computing and data science packages.\n",
-    "\n",
-    "\n",
-    "#### Windows\n",
-    "\n",
-    "Dowload the lastest version of Python ( MSI package) from the offficial site.\n",
-    "\n",
-    "Double-clik the file to install python.\n",
-    "\n",
-    "### Mac\n",
-    "\n",
-    "Recent Macs come with Python installed.\n",
-    "The latest version of Mac OS X, El Capitan, comes with Python 2.7.\n",
-    "\n",
-    "### Linux\n",
-    "\n",
-    "Most Linux distrbutions comes with python installed.\n",
-    "\n",
-    "\n",
-    "## Use conda to install python\n",
-    "\n",
+    "# Conda\n",
     "Conda is a cross-platform package manger and enviroment manager.\n",
     "Conda works on Windows, Mac, Linux.\n",
     "\n",
-    "Now conda provides python2.7 and python3.5.\n",
-    "See [Installatino guide](http://conda.pydata.org/miniconda.html).\n",
     "\n",
+    "##  Basci Usage\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conda Basci Usage\n",
     "\n",
     "List conda environments\n",
     "\n",
@@ -78,6 +38,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise - Conda\n",
+    "\n",
+    "Run the following commands in your terminal.\n",
+    "\n",
+    "```\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda create -n test_env python=2\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source activate test_env\n",
+    "\n",
+    "$ pip install speedtest-cli\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ source deactivate\n",
+    "\n",
+    "$ which speedtest-cli\n",
+    "\n",
+    "$ conda info -e\n",
+    "\n",
+    "$ conda env remove -n test_env\n",
+    "\n",
+    "$ conda info -e\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# pip\n",
     "\n",
     "pip is a python package management system.\n",
@@ -85,6 +78,16 @@
     "Python has a vast collection of third-party modules.\n",
     "\n",
     "We use it to  install and manage python modules.\n",
+    "\n",
+    "If you use conda to install python, pip comes with it.\n",
+    "\n",
+    "For other cases,\n",
+    "you may have pip installed on your system\n",
+    "since pip is included after Python2.7.9 and Python 3.4.\n",
+    "\n",
+    "If you don't have pip,\n",
+    "you can manually install it via this link\n",
+    "[pip Installation](http://pip.readthedocs.org/en/stable/installing/).\n",
     "\n",
     "[youtude-dl](https://github.com/rg3/youtube-dl/)\n",
     "\n",
@@ -112,6 +115,51 @@
     "If you want to see the application python can do,\n",
     "this website [awesome-python](https://github.com/vinta/awesome-python)\n",
     "maintains a list of awesome Python frameworks, libraries and software."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "# Exercise - pip\n",
+    "\n",
+    "\n",
+    "## pip - Run the follwing commands\n",
+    "\n",
+    "```\n",
+    "$ pip freeze\n",
+    "\n",
+    "$ pip install ipython\n",
+    "\n",
+    "$ pip insatll virtualenv\n",
+    "\n",
+    "$ pip uninstall ipython # optional\n",
+    "\n",
+    "```\n",
+    "\n",
+    "## virtualenv -  Run the follwing commands\n",
+    "\n",
+    "```\n",
+    "$ cd ~\n",
+    "\n",
+    "$ virtualenv test_env\n",
+    "\n",
+    "$ source test_env/bin/activate\n",
+    "\n",
+    "$ pip freeze\n",
+    "$ pip install speedtest-cli\n",
+    "$ speedtest-cli\n",
+    "$ pip freeze\n",
+    "\n",
+    "$ deactivate\n",
+    "\n",
+    "$ cd ~\n",
+    "$ rm -rf test_env\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -149,14 +197,6 @@
     "\n",
     "The venv module ( pyvenv) is used to create isolated environments.\n",
     "Eash isolated environments can have its own independent set of installed Python packages.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
     "\n",
     "\n"
    ]
