--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -8,8 +8,6 @@
     }
    },
    "source": [
-    "# Prerequisite\n",
-    "\n",
     "## Target audience\n",
     "\n",
     "We assume you know\n",
@@ -22,24 +20,64 @@
     "\n",
     "- basic HTML knowledge ( since we want to make a web crawler )\n",
     "\n",
-    "-  little knowledge about shell commands (pwd, ls, cd)\n",
-    "\n",
-    "## System requirement\n",
+    "-  little knowledge about shell commands (pwd, ls, cd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Prerequisite - System requirement\n",
     "\n",
     "\n",
     "Before the hour of code, we expect you\n",
     "\n",
     "- have installed the lastest conda\n",
-    "- have installed the latest python2.7 , pip\n",
+    "  + have installed the latest python2.7 , pip\n",
     "\n",
-    "- Prepare [cmder](http://cmder.net/) ( Windows Only )\n",
+    "- Prepare [cmder](http://cmder.net/) ( Windows Only )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
+    "# conda installation\n",
+    "\n",
+    "[conda - exe installer, bash installer](http://conda.pydata.org/miniconda.html)\n",
+    "\n",
+    "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
+    "\n",
+    "\n",
+    "\n",
+    "## windows\n",
+    "\n",
+    "Download the Miniconda installer exe file.\n",
+    "\n",
+    "Double click that exe flie and follow the instructions.\n",
+    "\n",
+    "## Mac, Linux\n",
+    "\n",
+    "Dowanload the bash installer script and excute it in your terminal.\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\n",
     "### Cmder - Windows Only\n",
@@ -63,7 +101,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Terminal - pwd, ls, cd\n",
     "\n",
@@ -99,26 +141,6 @@
     }
    },
    "source": [
-    "\n",
-    "# conda installation\n",
-    "\n",
-    "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
-    "\n",
-    "## windows\n",
-    "\n",
-    "Download the Miniconda installer exe file.\n",
-    "\n",
-    "Double click that exe flie and follow the instructions.\n",
-    "\n",
-    "## Mac, Linux\n",
-    "\n",
-    "Dowanload the bash installer script and excute it in your terminal.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Hour of code - Conda environment setting\n",
     "\n",
     "Open your terminal, type\n",
@@ -150,7 +172,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Why Python - Life is short, you need Python.\n",
     "\n",
@@ -168,7 +194,13 @@
     "\n",
     "## Strong/Active community\n",
     "\n",
-    "## Python is free\n",
+    "## Python is Free\n",
+    "\n",
+    "matlab?\n",
+    "\n",
+    "numpy\n",
+    "scipy\n",
+    "matplotlib\n",
     "\n",
     "\n",
     "## Python is Fun"
@@ -176,7 +208,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Python2 or Python3\n",
     "\n",
@@ -191,7 +227,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "# Develop Tool\n",
