--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -51,12 +51,13 @@
    },
    "source": [
     "\n",
-    "# conda installation\n",
+    "# Conda installation\n",
+    "\n",
+    "Conda is a cross-platform package manger and enviroment manager.\n",
     "\n",
     "[conda - exe installer, bash installer](http://conda.pydata.org/miniconda.html)\n",
     "\n",
     "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
-    "\n",
     "\n",
     "\n",
     "## windows\n",
@@ -152,14 +153,16 @@
     "$ conda info -e\n",
     "\n",
     "Enter the hour_of_code environment\n",
-    "$ source activate hour_of_code\n",
+    "$ source activate hour_of_code # Linux, OS X\n",
+    "$ activate hour_of_code # Windows\n",
     "\n",
     "... Operation in hour_of_code env\n",
     "... Operation in hour_of_code env\n",
     "... Operation in hour_of_code env\n",
     "\n",
     "Leave the hour_of_code environment\n",
-    "$ source deactivate\n",
+    "$ source deactivate # Linux, OS X\n",
+    "$ deactivate  # Windows\n",
     "```\n",
     "\n",
     "**Dangerous**: Remove the hour_of_code environment\n",
