--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -60,7 +60,7 @@
     "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
     "\n",
     "\n",
-    "## windows\n",
+    "## Windows\n",
     "\n",
     "Download the Miniconda installer exe file.\n",
     "\n",
