--- a/notebook/intro_python/Intro_to_jupyter_notebook.ipynb
+++ b/notebook/intro_python/Intro_to_jupyter_notebook.ipynb
@@ -4,8 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Jupyter Notebook\n",
     "\n",
-    "### Running jupyter notebook\n",
+    "The Jupyter Notebook is an interactive computing environment that enables users to\n",
+    "\n",
+    "- Edit code in the browser\n",
+    "- Run code from the browser\n",
+    "  + The default runs Python Code\n",
+    "  + Julia, R, Ruby, Haskell, Scala, node.js, Go\n",
+    "- Write documents in Markdown\n",
+    "- See the results of computations with rich media representations\n",
+    "  + HTML\n",
+    "  + PNG, SVG\n",
+    "  + PDF\n",
+    "  + LaTex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Install jupyter when using conda\n",
+    "\n",
+    "```\n",
+    "$ conda create -n jupyter_env python=2 # or python=3\n",
+    "\n",
+    "$ source activate jupyter_env\n",
+    "\n",
+    "$ conda install jupyter\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Running jupyter notebook\n",
     "\n",
     "Run the following command in the Terminal.\n",
     "\n",
@@ -16,8 +52,16 @@
     "    \n",
     "It will lanch the Notebook web application in your defalut web browser.\n",
     "\n",
+    "For example\n",
     "\n",
-    "### Jupyter notebook - Get started\n",
+    "```\n",
+    "$ git clone https://github.com/jminh/hour_of_code_python_2015.git\n",
+    "$ cd hour_of_code_python_2015/notebook\n",
+    "$ jupyter notebook\n",
+    "Now enjoy playing with jupyter\n",
+    "```\n",
+    "\n",
+    "# Jupyter notebook - Get started\n",
     "\n",
     "[Jupyter Notebook Examples and Tutorials](http://jupyter-notebook.readthedocs.org/en/latest/examples/Notebook/rstversions/Examples%20and%20Tutorials%20Index.html)\n",
     "\n",
@@ -34,17 +78,8 @@
    "source": [
     "## Runing Code\n",
     "\n",
-    "Run a code cell using Shift-Enter\n"
+    "Using Shif-Enter to run a code shell.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
