--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -197,6 +197,8 @@
     "\n",
     "## Strong/Active community\n",
     "\n",
+    "[Compare Languages on Open HUB](https://goo.gl/OrPYiu)\n",
+    "\n",
     "## Python is Free\n",
     "\n",
     "matlab?\n",
