Update Sample slides

--- a/notebook/crawler/Sample1 - Line_stickers.ipynb
+++ b/notebook/crawler/Sample1 - Line_stickers.ipynb
@@ -8,6 +8,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "!pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!pip install beautifulsoup4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -15,121 +46,50 @@
    },
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "url = 'https://store.line.me/stickershop/product/5511/zh-Hant'\n",
-    "response = requests.get(url)\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "stickers = []\n",
-    "\n",
-    "for tag in soup.find_all('span'):\n",
-    "    if u'style' not in tag.attrs:\n",
-    "        continue\n",
-    "    print tag\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "type(tag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "dir(tag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "stickers = []\n",
-    "\n",
-    "for tag in soup.find_all('span'):\n",
-    "    if u'style' not in tag.attrs:\n",
-    "        continue\n",
-    "    print tag.get('style')\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "stickers = []\n",
-    "\n",
-    "for tag in soup.find_all('span'):\n",
-    "    if u'style' not in tag.attrs:\n",
-    "        continue\n",
-    "    style = tag.get('style')\n",
-    "    l_parentheses = style.rfind('(') + 1\n",
-    "    r_parentheses = style.rfind(')')\n",
-    "    path = style[l_parentheses:r_parentheses]\n",
-    "    print path"
+    "!conda install lxml -y"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ls images/line_pic"
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Find Line Stickers\n",
+    "\n",
+    "#### Teaching: http://lmgtfy.com/?q=LINE+%E8%B2%BC%E5%9C%96"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stickers: 熊大＆兔兔（跟我玩嘛☆恩愛篇）\n",
+    "<img src=\"images/line_title.png\"/>\n",
+    "### https://store.line.me/stickershop/product/5511/zh-Hant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stickers and URL\n",
     "<img src='images/line_pic/8693394.png'/>\n",
     "https://sdl-stickershop.line.naver.jp/products/0/0/1/5511/android/stickers/8693394.png\n",
     "\n",
@@ -227,32 +187,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "---\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quick Start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import necessary librarys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import lxml\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "url = 'https://store.line.me/stickershop/product/5511/zh-Hant'\n",
+    "response = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parsing response data using BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(response.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find out stickers URL string via BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for tag in soup.find_all('span'):\n",
+    "    pprint(tag)\n",
+    "    pprint(tag.attrs)\n",
+    "    print(\"--\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try again to find out  stickers URL string via BeautifulSoup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for tag in soup.find_all('span', 'mdCMN09Image'):\n",
+    "    print(tag['style'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract stickers URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "stickers = []\n",
+    "\n",
+    "for tag in soup.find_all('span', 'mdCMN09Image'):\n",
+    "    style = tag['style']\n",
+    "    l_parentheses = style.rfind('(') + 1\n",
+    "    r_parentheses = style.rfind(')')\n",
+    "    path = style[l_parentheses:r_parentheses]\n",
+    "    stickers.append(path)\n",
+    "    print(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ls images/line_pic"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
