--- a/notebook/crawler/Sample2 - Tumblr.ipynb
+++ b/notebook/crawler/Sample2 - Tumblr.ipynb
@@ -16,26 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting git+https://github.com/dianakhuang/pytumblr.git@diana/python-3-support\n",
-      "  Cloning https://github.com/dianakhuang/pytumblr.git (to diana/python-3-support) to /var/folders/zr/l46s3c355634sx0h4f70nhlm0000gn/T/pip-y2jmj5a3-build\n",
-      "  Requirement already satisfied (use --upgrade to upgrade): PyTumblr==0.0.6 from git+https://github.com/dianakhuang/pytumblr.git@diana/python-3-support in /Users/dainese/.local/lib/python3.5/site-packages\n",
-      "Requirement already satisfied (use --upgrade to upgrade): future in /Users/dainese/.local/lib/python3.5/site-packages (from PyTumblr==0.0.6)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): requests-oauthlib in /Users/dainese/.local/lib/python3.5/site-packages (from PyTumblr==0.0.6)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): httpretty in /Users/dainese/miniconda2/envs/jupyter/lib/python3.5/site-packages (from PyTumblr==0.0.6)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): oauthlib>=0.6.2 in /Users/dainese/.local/lib/python3.5/site-packages (from requests-oauthlib->PyTumblr==0.0.6)\n",
-      "Requirement already satisfied (use --upgrade to upgrade): requests>=2.0.0 in /Users/dainese/miniconda2/envs/jupyter/lib/python3.5/site-packages (from requests-oauthlib->PyTumblr==0.0.6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# installation\n",
     "!pip install --user git+https://github.com/dianakhuang/pytumblr.git@diana/python-3-support"
@@ -233,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -253,8 +238,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/oauth/05.png\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -299,56 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2015-10-14 14:00:21 GMT\n",
-      "https://49.media.tumblr.com/5bbfd7bb60504d3cd8088d8fcd342b61/tumblr_ntm93aYvF51rmehl4o1_1280.gif\n",
-      "2015-10-13 23:47:18 GMT\n",
-      "https://49.media.tumblr.com/340f2ae5c9fffc92879e6d1ca08b71d2/tumblr_nvge7uKDxU1upvs5eo1_500.gif\n",
-      "2015-10-08 01:55:32 GMT\n",
-      "https://41.media.tumblr.com/34499cfc1ce7f8b435bb01100ead14fc/tumblr_nvumceb40K1roll6uo1_1280.jpg\n",
-      "2015-10-07 01:56:35 GMT\n",
-      "https://41.media.tumblr.com/73fbd3fb83833b563c1705cbf2653b05/tumblr_nvttq7Y4AO1s9x8i6o1_1280.jpg\n",
-      "2015-10-06 23:14:11 GMT\n",
-      "https://49.media.tumblr.com/662d48418a2b9286d9947131f94e2951/tumblr_mwui2jsYrS1qcr7fqo1_500.gif\n",
-      "2015-09-26 16:47:40 GMT\n",
-      "https://45.media.tumblr.com/7336fff8fe2098c224f777216d3e7426/tumblr_nv8cbuz3Dt1qejjfeo1_500.gif\n",
-      "2015-09-14 04:40:11 GMT\n",
-      "https://45.media.tumblr.com/6cbbf7e664d8cdf157dfb1676b58b6ce/tumblr_nun3b0wsyh1qz4u07o1_500.gif\n",
-      "2015-08-28 23:46:16 GMT\n",
-      "https://49.media.tumblr.com/131f9595f1a1cdbaac447c917f686122/tumblr_ntb6bozt7s1qd7ro1o1_540.gif\n",
-      "2015-08-25 12:54:50 GMT\n",
-      "https://49.media.tumblr.com/3f8bc3cb4df968675dc2b76e791cfe17/tumblr_nsfudgIB1M1sznfdio1_500.gif\n",
-      "2015-08-18 14:41:50 GMT\n",
-      "https://49.media.tumblr.com/96f44dc0add3709351d091f12954b5b7/tumblr_mshjmvZQT61rr2m16o1_400.gif\n",
-      "2015-08-18 02:40:29 GMT\n",
-      "https://36.media.tumblr.com/9d50dbd44a910d89f179f1bb6ff9c88c/tumblr_nt9bfhpPUW1qg0jdoo1_1280.jpg\n",
-      "2015-08-01 17:36:50 GMT\n",
-      "https://41.media.tumblr.com/6c59991dc4d122dfd448442960884fdd/tumblr_nsezle8otH1qg0jdoo1_1280.png\n",
-      "2015-07-16 18:06:06 GMT\n",
-      "https://40.media.tumblr.com/a562df07b8a8aee9a4cb7ac493ec8cfb/tumblr_nrlea6QxSK1qg0jdoo1_1280.jpg\n",
-      "2015-06-24 23:21:27 GMT\n",
-      "https://40.media.tumblr.com/a9068ad28a2e09eace7cf2fc142501f7/tumblr_nqh1zeqALq1tlllqgo1_1280.jpg\n",
-      "2015-06-15 14:44:43 GMT\n",
-      "https://49.media.tumblr.com/fe7d36386e1f7787becc4bbb9774277c/tumblr_npznqti8YL1qzpn6vo1_500.gif\n",
-      "2015-06-04 19:28:04 GMT\n",
-      "https://41.media.tumblr.com/e921a11ab507f5298b8036378be01fa4/tumblr_npfq2sNpnL1qg0jdoo1_1280.jpg\n",
-      "2015-06-04 13:45:16 GMT\n",
-      "https://45.media.tumblr.com/1a38d3e980efc5d8f43603a605b78b99/tumblr_nlkf5uphoC1qcjmr3o1_500.gif\n",
-      "2015-06-02 13:16:08 GMT\n",
-      "https://45.media.tumblr.com/bb409bcdb9b807e94933051c4a9c1ff3/tumblr_n0t7teqLIg1sg1fh4o1_500.gif\n",
-      "2015-06-02 00:39:33 GMT\n",
-      "https://45.media.tumblr.com/159e8821c185aabe82bf1defc1ee1827/tumblr_n9ugz2zMq71r650nko1_500.gif\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "posts = client.posts(tumblr_user)\n",
     "for post in posts.get('posts'):\n",
