--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -37,7 +37,7 @@
     "Before the hour of code, we expect you\n",
     "\n",
     "- have installed the lastest conda\n",
-    "  + have installed the latest python2.7 , pip\n",
+    "  + have installed the latest python3.5 , pip\n",
     "\n",
     "- Prepare [cmder](http://cmder.net/) ( Windows Only )\n"
    ]
@@ -148,7 +148,7 @@
     "\n",
     "```\n",
     "Create a clean conda environment: hour_of_code\n",
-    "$ conda create -n hour_of_code python=2 # First-time setup\n",
+    "$ conda create -n hour_of_code python=3 # First-time setup\n",
     "\n",
     "$ conda info -e\n",
     "\n",
@@ -193,6 +193,21 @@
     "\n",
     "  + [Extensive Libraries](https://github.com/vinta/awesome-python)\n",
     "\n",
+    "\n",
+    "1. Web development (django, flask, ...)\n",
+    "\n",
+    "2. Networking (socket, zeromq, ...)\n",
+    "\n",
+    "3. Graphical interfaces (tkinter, pyqt, ...)\n",
+    "\n",
+    "4. Scripting operating system tasks (os, ...)\n",
+    "\n",
+    "5. Games (pygame, ...)\n",
+    "\n",
+    "6. Data processing (pandas, ...)\n",
+    "\n",
+    "7. Business applications (....)\n",
+    "\n",
     "## Quick/Rapid prototype\n",
     "\n",
     "## Strong/Active community\n",
@@ -226,7 +241,9 @@
     "\n",
     "Choose a version comes down to the libraries you need\n",
     "\n",
-    "The end of life of Python2.7 is 2020."
+    "The end of life of Python2.7 is 2020.\n",
+    "\n",
+    "[What's REALLY New in Python 3](http://migrateup.com/whats-really-new-in-python-3/?utm_campaign=CodeTengu&amp;utm_medium=web&amp;utm_source=CodeTengu_14)"
    ]
   },
   {
@@ -265,21 +282,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
