--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -59,6 +59,7 @@
     "\n",
     "You can follow this official installation [guide](http://conda.pydata.org/docs/installation.html).\n",
     "\n",
+    "Conda make it easy to install third libraries, which are often a platform-dependent C, C++, or Fortran code.\n",
     "\n",
     "## Windows\n",
     "\n",
