--- a/notebook/intro_python/1_manage_your_python_env_coda_virtualenv.ipynb
+++ b/notebook/intro_python/1_manage_your_python_env_coda_virtualenv.ipynb
@@ -8,6 +8,11 @@
     "Conda is a cross-platform package manger and enviroment manager.\n",
     "Conda works on Windows, Mac, Linux.\n",
     "\n",
+    "Why conda?\n",
+    "\n",
+    "It is not easy to build and install third libraries, \n",
+    "which are often a platform-dependent C, C++, or Fortran code.\n",
+    "\n",
     "\n",
     "##  Basci Usage\n",
     "\n",
@@ -204,21 +209,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
