--- a/notebook/intro_python/0_prerequisite.ipynb
+++ b/notebook/intro_python/0_prerequisite.ipynb
@@ -237,14 +237,21 @@
    "source": [
     "# Python2 or Python3\n",
     "\n",
+    "The end of life of Python2.7 is 2020.\n",
+    "\n",
+    "[What's REALLY New in Python 3](http://migrateup.com/whats-really-new-in-python-3/?utm_campaign=CodeTengu&amp;utm_medium=web&amp;utm_source=CodeTengu_14)\n",
     "\n",
     "## Library compatibility with Python 3?\n",
     "\n",
     "Choose a version comes down to the libraries you need\n",
     "\n",
-    "The end of life of Python2.7 is 2020.\n",
+    "For example,\n",
     "\n",
-    "[What's REALLY New in Python 3](http://migrateup.com/whats-really-new-in-python-3/?utm_campaign=CodeTengu&amp;utm_medium=web&amp;utm_source=CodeTengu_14)"
+    "[tumblr/pytumblr](https://github.com/tumblr/pytumblr): A Python Tumblr API v2 Client\n",
+    "    \n",
+    "It [does not](https://github.com/tumblr/pytumblr/blob/master/.travis.yml) support Python3 currently.\n",
+    "\n",
+    "Fortunately, there is [a pull request for supporting Python3](https://github.com/tumblr/pytumblr/issues/51).\n"
    ]
   },
   {
